...
                        letterSpacing = 1.2.sp,
                        modifier = Modifier.padding(horizontal = 12.dp, vertical = 6.dp)
                    )
                }

                Text(
                    text = "Was suchst du bei Kliq?",
                    style = MaterialTheme.typography.headlineMedium.copy(
                        color = DarkOnBackground,
                        fontWeight = FontWeight.ExtraBold,
                        fontSize = 28.sp
                    )
                )
...
                    } else {
                        Row(
                            verticalAlignment = Alignment.CenterVertically,
                            horizontalArrangement = Arrangement.Center
                        ) {
                            Text(
                                text = "Auswahl bestätigen",
                                fontSize = 16.sp,
                                fontWeight = FontWeight.Bold
                            )
                            Spacer(modifier = Modifier.width(8.dp))
                            Icon(
                                imageVector = Icons.Default.ArrowForward,
...
